charts/tekton-hro/automatiko-approval-task-0.9.0/k8s/v1beta1/kubernetes-basic.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app.kubernetes.io/name: automatiko-approval-task
    app.kubernetes.io/version: 0.9.0
  name: automatiko-approval-task
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: automatiko-approval-task
    app.kubernetes.io/version: 0.9.0
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: automatiko-approval-task
    app.kubernetes.io/version: 0.9.0
  name: automatiko-approval-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: automatiko-approval-task
      app.kubernetes.io/version: 0.9.0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: automatiko-approval-task
        app.kubernetes.io/version: 0.9.0
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: QUARKUS_OPERATOR_SDK_NAMESPACES
              value: devops-pipelines
            - name: QUARKUS_AUTOMATIKO_SERVICE_URL
              value: https://tekton-approval.herosonsa.co.kr
            - name: QUARKUS_MAILER_MOCK
              value: "true"
            - name: QUARKUS_PROFILE
              value: withemail
            - name: QUARKUS_MAILER_FROM
              value: youruser@gmail.com
            - name: QUARKUS_MAILER_HOST
              value: smtp.gmail.com              
            - name: QUARKUS_MAILER_PORT
              value: "587"
            - name: QUARKUS_MAILER_USERNAME
              value: youruser@gmail.com
            - name: QUARKUS_MAILER_PASSWORD
              value: password                              
            - name: QUARKUS_AUTOMATIKO_ON_INSTANCE_END
              value: "keep" 
          #  - name: QUARKUS_AUTOMATIKO_NOTIFICATIONS_SLACK_CORECOMBACKEND
          #    value: "https://mattermost.herosonsa.co.kr/hooks/mhjfywnkbbfftrpnjy1zpoyiso"
          image: tbd5d1uh.private-ncr.fin-ntruss.com/k8s/dev/devops/automatiko-approval-task:v0.9.0
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: automatiko-approval-task
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
      serviceAccountName: automatiko-approval-task
      imagePullSecrets:
        - name: hero-reg
